@@ -1,3 +1,10 @@
+* Tue Aug 29 2023 Steven Pritchard <steve@sicura.us> - 6.5.0
+- Support for Puppet 8 and stdlib 9
+- Drop use of Stdlib::Compat::Integer type
+- Drop use of deprecated top-level facts
+- Update gem dependencies
+- Drop support for Puppet 6
+
 * Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.4.0
 - Add RockyLinux 8 support
 
